fix: iframe spacing and background images bug

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -234,15 +234,6 @@ h3.index-header {
     color: #c4302b;
 }
 
-#soundcloud-iframe {
-    width: 100%;
-    height: 300px;
-}
-
-#new-ep {
-    background: url(../images/hero-placeholder.jpg) no-repeat center center;
-}
-
 #buy-now {
     margin-left: 67px;
     margin-top: 0px;
@@ -393,17 +384,23 @@ button#email-button {
     height: 450px;
     background-image: url("../images/mike2.jpg");
     background-size: contain;
-    background-position: left;
+    background-position: left bottom;
     background-repeat: no-repeat;
     background-attachment: fixed;
+    padding-right: 0;
 }
+
+    .iframe {
+    padding-left: 0;
+    padding-right: 0;
+    }
 
 #youtube-section {
     height: 400px;
     background-image: url("../images/fran4.jpg");
     background-repeat: no-repeat;
     background-size: contain;
-    background-position: right;
+    background-position: right bottom;
     background-attachment: fixed;
 }
 }
